fix css: align titles of dropdowns to the left

--- a/src/main/resources/public/css/components/dropdown-menu.css
+++ b/src/main/resources/public/css/components/dropdown-menu.css
@@ -35,7 +35,7 @@
 /* Service dropdown */
 .dropdown-header .form .dropdown-name {
     height: 100%;
-    width: 100%;
+    width: auto;
     align-items: center;
 }
 
